--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,12 @@
-<my-test text="text1" a="data[1]" my-fn="show(data[1])"></my-test>
-<my-test text="text2" a="data[0]" my-fn="show(data[0])"></my-test>
+<my-carousel ng-style="sizes" my-data="data" my-interval="3000">
+    <my-slider ng-repeat="item in data">
+        <a ng-style="sizes">
+            <img ng-src="{{item.imageUrl}}" width="{{sizes.width}}" height="{{sizes.height}}"/>
+        </a>
+    </my-slider>
+</my-carousel>
 
-<!--<direct get-title="title" get-content="contents"></direct>-->
+<div ng-click="aaa()">切换数据源测试</div>
+<br>
+<br>
+<a href="/main.html#/index">跳转到另一页测试</a>
