--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,9 @@
-<my-carousel ng-style="sizes" my-data="data" my-interval="3000">
+<my-carousel ng-style="sizes" my-data="data" my-interval="3000" my-callback="bbb">
     <my-slider ng-repeat="item in data">
         <a ng-style="sizes">
             <img ng-src="{{item.imageUrl}}" width="{{sizes.width}}" height="{{sizes.height}}"/>
         </a>
     </my-slider>
 </my-carousel>
-
+<br>
 <div ng-click="aaa()">切换数据源测试</div>
